<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:hint="@string/personName"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <TextView
            style="@style/TextViewStyles"
            android:padding="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/checkBoxWhipped"
            style="@style/TextViewStyles"
            android:layout_marginStart="8dp"
            android:text="@string/cream" />

        <CheckBox
            android:id="@+id/checkBoxChocolate"
            style="@style/TextViewStyles"
            android:layout_marginStart="8dp"
            android:text="@string/choco" />

        <TextView
            style="@style/TextViewStyles"
            android:padding="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="decrement"
                android:text="@string/dec" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/TextViewStyles"
                android:paddingTop="0dp"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="increment"
                android:text="@string/inc" />


        </LinearLayout>

        <TextView
            style="@style/TextViewStyles"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/summary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            style="@style/TextViewStyles"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/price" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>

</ScrollView>
